--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,75 +65,72 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 body {
-	margin-left: 100px;
-	margin-right: 100px;
-	/* border: 5px solid black; */
+	margin-left: 150px;
+	margin-right: 150px;
+	/* border: 1px solid black; */
+}
+
+h1 {
+	font-size: 5em;
+}
+
+h3 {
+	font-size: 1.25em;
 }
 
 header {
+	display: flex;
+	justify-content: space-between;
 	padding: 40px 0;
-	/* background: orange; */
+	/* background-color: orange; */
+}
+
+header nav {
+	display: flex;
+	padding-top: 10px;
+	width: 70%;
+	justify-content: space-between;
 }
 
 header nav a {
 	color: grey;
-	padding-top: 10px;
 	text-decoration: none;
-	/* background-color: greenyellow; */
-}
-
-nav {
-	display: flex;
-	width: 75%;
-	justify-content: space-evenly;
-}
-
-header .logo {
-	display: inline-block;
-	position: relative;
-	/* background-color: green; */
-	margin-left: 80%;
-	margin-top: -50px;
 }
 
 .top-div {
-	/* background-color: lightblue; */
-	border-bottom: 2px solid black;
-	display: block;
-	height: 500px;
+	display: flex;
+	justify-content: space-around;
+	/* background-color: grey; */
+	padding: 30px 10px;
+	border-bottom: 1px solid black;
 }
 
-.top-div h1 {
-	display: inline-block;
-	font-size: 80px;
-	/* background-color: green; */
-	height: 250px;
-	width: 350px;
+.left {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
-	margin-top: 80px;
-	margin-left: 15%;
+	
+	/* background: green; */
 }
 
-.top-div span {
-	display: block;
-	height: 30px;
-	width: 150px;
-	padding: 5px 35px;
-	box-sizing: border-box;
-	border: 1px solid black;
-	margin-left: 25%;
-}
-
-.top-div img {
-	position: relative;
-	margin-left: 60%;
-	margin-top: -320px;
+.left button {
+	width: 40%;
+	height: 2.5em;
+	background: white;
 }
 
 .top-section {
-	/* background: orange; */
-	column-count: 2;
+	display: flex;
+	justify-content: space-between;
 	padding: 40px 0;
+}
+
+.top-section .features, .top-section .about {
+	display: flex;
+	flex-direction: column;
+	width: 47.5%;
 }
 
 .middle-img {
@@ -141,15 +138,14 @@ header .logo {
 }
 
 .bottom-section {
-	/* background: lightblue; */
-	column-count: 3;
+	display: flex;
+	justify-content: space-between;
 	padding: 40px 0;
+	border-bottom: 1px solid black;
 }
 
 footer {
-	/* background: orange; */
-	padding: 40px 0 100px;
-	border-top: 2px solid black;
+	padding: 40px 0 50px;
 }
 
 footer span {
