--- a/great-idea/css/product.css
+++ b/great-idea/css/product.css
@@ -63,11 +63,10 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* ------------------------------------------ MY CODE BELOW ---------------------------------------- */
+/* ------------------------------ My code below ------------------------------------ */
 body {
-	margin-left: 150px;
+    margin-left: 150px;
 	margin-right: 150px;
-	/* border: 5px solid black; */
 }
 
 h1 {
@@ -81,16 +80,15 @@ h3 {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 40px 0 0;
+    padding: 40px 0 20px;
     align-items: center;
-    /* background: green; */
 }
 
 header nav {
     display: flex;
     width: 70%;
     justify-content: space-between;
-    /* background-color: blue; */
+    /* padding-top: 10px; */
 }
 
 header nav a {
@@ -98,72 +96,82 @@ header nav a {
     text-decoration: none;
 }
 
-.services-header-img {
-    width: 100%;
+article {
+    display: flex;
     padding: 30px 0;
+    justify-content: space-around;
+    /* background-color: grey; */
 }
 
-.top-section {
+article div {
+    width: 20%;
+}
+
+article p {
+    width: 35%;
+    text-align: justify;
+}
+
+.circles {
     display: flex;
-    flex-direction: column;
-    padding: 30px 0;
-    line-height: 1.25em;
+    flex-flow: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.circles img {
+    width: 20%;
+}
+
+@keyframes example1 {
+    from {opacity: 1;}
+    to {opacity: 0.25;}
+}
+
+.circles img:hover {
+    animation-name: example1;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
 .gallery {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    padding: 30px 0;
+    justify-content: space-around;
+    align-content: space-evenly;
+    height: 400px;
+    /* background-color: green; */
+}
+
+.small {
+    width: 22.5%;
+}
+
+.big {
+    width: 45%;
+}
+
+@keyframes example2 {
+    from {background-color: silver;}
+    to {background-color: black;}
+
+    from {color: black;}
+    to {color: silver;}
+}
+
+.small:hover, .big:hover {
+    animation-name: example2;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
 }
 
 .gallery div {
-    width: 450px;
-    height: 250px;
-    padding: 10px;
-    margin: 20px 0;
-    border: 1px solid black;
-    background: rgb(230, 228, 228);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.gallery div button {
-    height: 3em;
-    width: 35%;
-    border-radius: 6px;
-    background-color: rgb(252, 252, 253);
+    background-color: silver;
+    height: 150px;
 }
 
 footer {
-    padding: 40px 0;
-    /* background: crimson; */
-}
-
-footer .footer {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.footer .left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    /* background: cornsilk; */
-    line-height: 1.5em;
-    padding-bottom: 30px;
-}
-
-footer span {
     display: flex;
     justify-content: center;
-    padding-top: 75px;
-}
-
-ul {
-    list-style: square;
-    margin-left: 20px;
+    padding: 20px 0 50px;
 }
